--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.19",
+    "@types/lodash.max": "^4.0.6",
     "@types/lodash.shuffle": "^4.2.6",
+    "@types/lodash.sumby": "^4.6.6",
     "@types/node": "12.7.12",
     "@types/react": "16.9.6",
     "@types/react-dom": "16.9.2",
+    "lodash": "^4.17.15",
+    "lodash.max": "^4.0.1",
     "lodash.shuffle": "^4.2.0",
+    "lodash.sumby": "^4.6.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
