--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@types/node": "12.7.12",
     "@types/react": "16.9.6",
     "@types/react-dom": "16.9.2",
+    "bootstrap": "^4.5.0",
     "lodash": "^4.17.15",
     "lodash.max": "^4.0.1",
     "lodash.shuffle": "^4.2.0",
     "lodash.sumby": "^4.6.0",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
