--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "12.7.12",
     "@types/react": "16.9.6",
     "@types/react-dom": "16.9.2",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "lodash": "^4.17.15",
     "lodash.max": "^4.0.1",
